подготовка проекта:шрифты,кнопки,типографика

--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,42 @@
 <!-- begin header -->
 <header class="header">
 	<div class="uk-container">
-		<div class="header__desk uk-visible@m">
+		<div class="header__desk ">
 	
+<div class="uk-container">
+	<div class="someblock">
+		<img src="img/icon-svg/wave.svg" alt="" uk-scrollspy="cls:slide-up">
+	</div>
+</div>
+
+
+<a href="" class="btn"><span>попробуйте наш таймер</span></a>
+<a href="" class="btn btn--icon icon-clock"><span>попробуйте наш таймер</span></a>
+
+<div class="somediv">
+	<a href="" class="btn btn--yellow"><span>посмотреть все рецепты</span></a>
+	<a href="" class="btn btn--yellow"><span>Посмотреть все факты о яйце</span></a>
+	<a href="" class="btn btn--icon icon-clock btn--yellow"><span>посмотреть все рецепты</span></a>
+</div>
+
+<h1>Натуральный
+продукт</h1>
+
+
+<h2>Натуральный
+продукт</h2>
+
+
+
+<h3>Натуральный
+продукт</h3>
+
+
+
+<h4>Натуральный
+продукт</h4>
+
+
 	<div class="logo1">
 	<a href=""><img src="img/media/logo.svg" alt="Leto"/></a>
 </div>
@@ -44,7 +78,7 @@
 </div>
 
 <!-- begin nav -->
-<nav class="nav">
+<nav class="nav" style="display: none;">
 	<ul class="main-nav">
 		<li><a href="#">Лет</a></li>
 		<li><a href="#">Деревнское угодье</a></li>
