--- a/app/index.html
+++ b/app/index.html
@@ -25,9 +25,34 @@
 <body>
 <!-- begin header -->
 <header class="header">
+	<div class="header__desk ">
+	<!-- begin top-panel -->
+<div class="top-panel">
 	<div class="uk-container">
-		<div class="header__desk ">
-	
+
+		<div class="top-panel__inner">
+
+			<a href="/timer.html" class="timer-link">
+				<span class="timer-link__icon icon-clock"></span>
+				<span class="timer-link__text">Таймер для варки яиц</span>
+			</a>
+
+			
+			<div class="top-panel-nav">
+				<ul class="nav-list">
+					<li><a href="#">Яйцо</a></li>
+					<li><a href="#">Рецепты</a></li>
+					<li><a href="#">О компании</a></li>
+					<li><a href="#">Переработка</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</div>
+		</div>
+
+	</div>
+</div><!-- end top-panel -->
+
+<!-- 
 <div class="uk-container">
 	<div class="someblock">
 		<img src="img/icon-svg/wave.svg" alt="" uk-scrollspy="cls:slide-up">
@@ -62,7 +87,28 @@
 продукт</h4>
 
 
-	<div class="logo1">
+ -->
+	
+<!-- begin nav -->
+<nav class="nav">
+	<div class="uk-container">
+		<ul class="main-nav">
+			<li><a href="#">Лето</a></li>
+			<li><a href="#">Деревнское угодье</a></li>
+			<li>
+				<span class="logo1">
+					<a href="#"><img src="img/media/logo.svg" alt="Leto"></a>
+				</span>
+			</li>
+			<li><a href="#">Junior</a></li>
+			<li><a href="#">Сельская новь</a></li>
+		</ul>
+	</div>
+</nav><!-- end nav -->
+
+
+
+<!-- <div class="logo1">
 	<a href=""><img src="img/media/logo.svg" alt="Leto"/></a>
 </div>
 
@@ -76,35 +122,48 @@
 <div class="logo3">
 	<a href=""><img src="img/media/logo.svg" alt="Leto"/></a>
 </div>
-
-<!-- begin nav -->
-<nav class="nav" style="display: none;">
-	<ul class="main-nav">
-		<li><a href="#">Лет</a></li>
-		<li><a href="#">Деревнское угодье</a></li>
-		<li>
-			<span class="logo2">
-				<a href="#"><img src="img/media/logo.svg" alt="Leto"></a>
-			</span>
-		</li>
-		<li><a href="#">Junior</a></li>
-		<li><a href="#">Сельская новь</a></li>
-	</ul>
-</nav><!-- end nav -->
-
-
-
+ -->
 </div>
-		<!-- begin header__mobile -->
+	<!-- begin header__mobile -->
 <div class="header__mobile uk-hidden@m">
 	555
 </div><!-- end header__mobile -->
-	</div>
 </header><!-- end header -->
 	
-	<section>
-		test	
-	</section>
+	<div class="main-banner">
+		<div class="uk-container uk-container--large">
+
+			<div class="main-banner__img">
+				<img src="img/media/main-banner-1-1440x730.png" alt="">
+<!-- 				<svg>
+	<defs>
+		<clipPath id="cut-center">
+			<ellipse fill="red" rx="800px" ry="200px" cx="690" cy="-100" />
+		</clipPath>
+	</defs>
+	<rect
+		width="100%"
+		height="400px"
+		clip-path="url(#cut-center)"
+		fill="transparent"
+		>
+</svg> -->
+			</div>
+
+			<div class="main-banner__text">
+				<div class="main-banner__title">
+					<h1>Натуральный продукт</h1>
+				</div>
+				<div class="main-banner__subtitle">
+					для всей семьи
+				</div>
+				<svg width="29px" height="67px" class="main-banner__arrow-down">
+				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-down"></use>
+				</svg>
+			</div>
+
+		</div>
+	</div>
 
 <!-- begin footer -->
 <footer class="footer">
