--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,9 @@
 		<script src="libs/placeholders.min.js"></script>
 	<![endif]-->
 </head>
+
 <body>
+
 <!-- begin header -->
 <header class="header">
 	<div class="header__desk ">
@@ -88,6 +90,7 @@
 
 
  -->
+
 	
 <!-- begin nav -->
 <nav class="nav">
@@ -123,31 +126,36 @@
 	<a href=""><img src="img/media/logo.svg" alt="Leto"/></a>
 </div>
  -->
+
 </div>
+
 	<!-- begin header__mobile -->
 <div class="header__mobile uk-hidden@m">
 	555
 </div><!-- end header__mobile -->
+
 </header><!-- end header -->
+
+
 	
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
 
 			<div class="main-banner__img">
 				<img src="img/media/main-banner-1-1440x730.png" alt="">
-<!-- 				<svg>
-	<defs>
-		<clipPath id="cut-center">
-			<ellipse fill="red" rx="800px" ry="200px" cx="690" cy="-100" />
-		</clipPath>
-	</defs>
-	<rect
-		width="100%"
-		height="400px"
-		clip-path="url(#cut-center)"
-		fill="transparent"
-		>
-</svg> -->
+				<!-- 				<svg>
+					<defs>
+						<clipPath id="cut-center">
+							<ellipse fill="red" rx="800px" ry="200px" cx="690" cy="-100" />
+						</clipPath>
+					</defs>
+					<rect
+						width="100%"
+						height="400px"
+						clip-path="url(#cut-center)"
+						fill="transparent"
+						>
+				</svg> -->
 			</div>
 
 			<div class="main-banner__text">
@@ -161,9 +169,109 @@
 				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-down"></use>
 				</svg>
 			</div>
+			
+			<div class="fly-box" uk-scrollspy="cls: slide-up-abs">
+				<img src="img/media/egg-box-1.png" alt="Лето">
+			</div>
 
 		</div>
 	</div>
+
+	<section class="advantages-section">
+		<div class="uk-container">
+			<div class="advantages-section__inner">
+				<ul class="advantages-list">
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-1">
+								<img data-src="img/media/advantage-img/advantage-img-1.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Контроль свежести</div>
+								<div class="text">
+									Мы ставим дату сортировки на каждом яйце, чтобы вы были уверены в его свежести
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-2">
+								<img data-src="img/media/advantage-img/advantage-img-2.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Яркий желток</div>
+								<div class="text">
+									Благодаря содержанию в корме отборной кукурузы у яиц Лето яркий солнечный желток
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-3">
+								<img data-src="img/media/advantage-img/advantage-img-3.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Натуральный корм</div>
+								<div class="text">
+									Основу корма куриц составляет натуральная пшеница, кукуруза, соевые бобы, а также подсолнечник
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-4">
+								<img data-src="img/media/advantage-img/advantage-img-4.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Куры несушки лучших пород</div>
+								<div class="text">
+									Hisex Brown — голландская порода куриц-несушек, одна из самых популярных в мире
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-5">
+								<img data-src="img/media/advantage-img/advantage-img-5.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Двойной контроль</div>
+								<div class="text">
+									Только в марке Лето двойной контроль качества продукции перед упаковыванием
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-6">
+								<img data-src="img/media/advantage-img/advantage-img-6.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Размер — CО и С1</div>
+								<div class="text">
+									Используются столовые яйца отборной и первой категории (СО и С1)
+								</div>
+							</div>
+							<a href="#" class="advantage-item__link">
+								Подробнее про шкалу размеров
+							</a>
+						</div>
+					</li>
+				</ul>
+				<div class="center-box">
+					<img src="img/media/advantage-img/egg-green.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+
 
 <!-- begin footer -->
 <footer class="footer">
@@ -177,6 +285,9 @@
 
 
 
+
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
@@ -184,6 +295,7 @@
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/ofi.min.js" defer></script>
 <script src="js/main.js" defer></script>
+
 
 </body>
 </html>
