верстка блока с яйцами и js

--- a/app/index.html
+++ b/app/index.html
@@ -22,9 +22,7 @@
 		<script src="libs/placeholders.min.js"></script>
 	<![endif]-->
 </head>
-
 <body>
-
 <!-- begin header -->
 <header class="header">
 	<div class="header__desk ">
@@ -90,7 +88,6 @@
 
 
  -->
-
 	
 <!-- begin nav -->
 <nav class="nav">
@@ -126,17 +123,12 @@
 	<a href=""><img src="img/media/logo.svg" alt="Leto"/></a>
 </div>
  -->
-
 </div>
-
 	<!-- begin header__mobile -->
 <div class="header__mobile uk-hidden@m">
 	555
 </div><!-- end header__mobile -->
-
 </header><!-- end header -->
-
-
 	
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
@@ -183,7 +175,10 @@
 				<ul class="advantages-list">
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-1">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-1.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -196,7 +191,10 @@
 					</li>
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-2">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-2.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -209,7 +207,10 @@
 					</li>
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-3">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-3.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -222,7 +223,10 @@
 					</li>
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-4">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-4.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -235,7 +239,10 @@
 					</li>
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-5">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-5.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -248,7 +255,10 @@
 					</li>
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-6">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-6.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -271,17 +281,12 @@
 	</section>
 
 
-
-
 <!-- begin footer -->
 <footer class="footer">
 	<div class="uk-container uk-container--small">
 		FOOTER
 	</div>
 </footer><!-- end footer -->
-
-
-
 
 
 
@@ -295,7 +300,6 @@
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/ofi.min.js" defer></script>
 <script src="js/main.js" defer></script>
-
 
 </body>
 </html>
