--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 		<script src="libs/placeholders.min.js"></script>
 	<![endif]-->
 </head>
-<body>
+<body class="theme-green">
 <!-- begin header -->
 <header class="header">
 	<div class="header__desk ">
@@ -274,11 +274,101 @@
 					</li>
 				</ul>
 				<div class="center-box">
+					<svg width="100%" height="100%" class="yellow-ellipse-1">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-1"></use>
+					</svg>
+					<svg width="100%" height="100%" class="yellow-ellipse-2">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-2"></use>
+					</svg>
 					<img src="img/media/advantage-img/egg-green.png" alt="">
 				</div>
 			</div>
 		</div>
 	</section>
+
+	
+<div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+	<div class="uk-container">
+		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Удобно нести и хранить</h2>
+		<ul class="advantages-h-list">
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-1"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="80px" height="93px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-1"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Прочная упаковка выдержит кастрюлю, поставленную сверху
+				</div>
+			</li>
+
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-2"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="80px" height="81px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-2"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Экологичная упаковка из переработанной бумаги
+				</div>
+			</li>
+
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-3"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="93px" height="45px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-3"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Упаковка на 20 яиц защищена плёнкой
+				</div>
+			</li>
+
+			<li class="item">
+				<div class="item__img">
+					<div class="bg-img">
+						<svg width="100%" height="100%" class="adv-bg-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-4"></use>
+						</svg>
+					</div>
+					<div class="content-img">
+						<svg width="80px" height="98px" class="adv-img">
+						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-4"></use>
+						</svg>
+					</div>
+				</div>
+				<div class="item__text">
+					Упаковка выдерживает случайные падения
+				</div>
+			</li>
+		</ul>
+	</div>
+</div>
+
+
+
+
 
 
 <!-- begin footer -->
