--- a/app/index.html
+++ b/app/index.html
@@ -370,6 +370,89 @@
 
 
 
+	
+	<div class="typebox-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+		<div class="uk-container">
+			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Виды упаковки</h2>
+
+			<ul class="typebox-list">
+
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="typebox-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img data-src="img/media/box-type-1.png" alt="" uk-img>
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">На семью из 3-4 человек</div>
+						<div class="item__subtitle">20 яиц С1 (55-64,9 грамм)</div>
+					</div>
+				</li>
+
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="typebox-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-2"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img data-src="img/media/box-type-2.png" alt="" uk-img>
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Упаковка премиум класса</div>
+						<div class="item__subtitle">10 яиц С1 (55-64,9 грамм)</div>
+					</div>
+				</li>
+
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="typebox-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img data-src="img/media/box-type-3.png" alt="" uk-img>
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Упаковка премиум класса</div>
+						<div class="item__subtitle">10 яиц С0 (65-74,9 грамм)</div>
+					</div>
+				</li>
+
+			</ul>
+
+		</div>
+	</div>
+
+
+
+
+		<!-- begin brands-slider -->
+	<div class="brands-slider preload">
+		<div class="uk-container">
+			<div class="slider">
+				<div class="slide"><a href=""><img data-lazy="img/media/box-type-2.png" alt=""></a></div>
+				<div class="slide"><a href=""><img data-lazy="img/media/box-type-3.png" alt=""></a></div>
+				<div class="slide"><a href=""><img data-lazy="img/media/box-type-4.png" alt=""></a></div>
+				<div class="slide"><a href=""><img data-lazy="img/media/box-type-5.png" alt=""></a></div>
+				<div class="slide"><a href=""><img data-lazy="img/media/box-type-6.png" alt=""></a></div>
+			</div>
+			<div class="slider__arrows">
+				<div class="slide-prev"><i class="icon-arrow-left"></i></div>
+				<div class="slide-next"><i class="icon-arrow-right"></i></div>
+			</div>
+		</div>
+	</div>
+	<!-- end  brands-slider -->
 
 <!-- begin footer -->
 <footer class="footer">
@@ -389,6 +472,7 @@
 <script src="libs/slick/slick.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/ofi.min.js" defer></script>
+<script src="js/sliders.js" defer></script>
 <script src="js/main.js" defer></script>
 
 </body>
