--- a/app/company.html
+++ b/app/company.html
@@ -216,6 +216,24 @@
 		</div>
 	</section><!-- end total-section -->
 
+	<!-- begin about-egg -->
+	<section class="about-egg uk-text-center">
+		<div class="uk-container">
+			<div class="about-egg__img">
+				<img src="img/media/egg-2.png" alt="">
+			</div>
+			<div class="about-egg__text">
+				<p>
+					Яйцо — один из немногих продуктов, остающийся неизменным 
+					в потреблении человеком на протяжении тысячелетий.
+				</p>
+				<p>
+					Миссия нашей компании — бережно сохранять и нести людям ценность этого натурального продукта
+				</p>
+			</div>
+		</div>
+	</section><!-- end about-egg -->
+
 
 <!-- begin footer -->
 <footer class="footer">
