--- a/app/company.html
+++ b/app/company.html
@@ -234,6 +234,65 @@
 		</div>
 	</section><!-- end about-egg -->
 
+	<section class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+		<div class="uk-container">
+			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Производим натуральный продукт</h2>
+			<ul class="advantages-h-list advantages-h-list--three-items">
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="adv-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-1"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img src="img/icon-svg/adv-icon-5.svg" alt="">
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Натуральность</div>
+						Наше производство расположено в экологически чистых регионах Белгородской и Тульской областей
+					</div>
+				</li>
+
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="adv-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-2"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img src="img/icon-svg/adv-icon-6.svg" alt="">
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Безопасность</div>
+						Система менеджмента безопасности пищевой продукции (СМБПП), основанная 
+						на требованиях стандарта ISO 22000:2018 
+					</div>
+				</li>
+
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="adv-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-3"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img src="img/icon-svg/adv-icon-7.svg" alt="">
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Свежесть</div>
+						Прямые контракты с ключевыми розничными сетями позволяют работать без склада
+					</div>
+				</li>
+			</ul>
+		</div>
+	</section>
+
 
 <!-- begin footer -->
 <footer class="footer">
