--- a/app/index.html
+++ b/app/index.html
@@ -635,7 +635,7 @@
 	</div>
 </section>
 	
-<section class="composition-section wave-bg" uk-scrollspy="cls: wave-anim">
+<section class="slider-section wave-bg" uk-scrollspy="cls: wave-anim">
 	<div class="uk-container uk-container--small">
 		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Какие элементы содержит яйцо?</h2>
 		<!-- begin composition-slider -->
