--- a/app/company.html
+++ b/app/company.html
@@ -409,30 +409,202 @@
 	<section class="products-section">
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center">Наша продукция доступна в магазинах</h2>
+			<div class="products-section__inner">
+				<img class="ellipse-abs-1 uk-visible@l" src="img/icon-svg/large-ellipse-1.svg" alt="">
+				<img class="ellipse-abs-2 uk-visible@l" src="img/icon-svg/large-ellipse-2.svg" alt="">
+				<!-- begin custom-tabs -->
+				<div class="custom-tabs">
 
-			<!-- begin custom-tabs -->
-			<div class="custom-tabs">
-				<ul class="tab-sw" uk-switcher="swiping: false">
-					<li><a href="">Цфо</a></li>
-					<li><a href="">Юфо</a></li>
-				</ul>
+					<ul class="tab-sw" uk-switcher="swiping: false">
+						<li><a href="">Цфо</a></li>
+						<li><a href="">Юфо</a></li>
+					</ul>
 
-				<ul class="uk-switcher">
-					<li>
-						<div class="tab-slider">
-							<div class="slider">
-								<div class="slide">
-									<div class="brands-grid">
-										
+					<ul class="uk-switcher">
+						<li>
+							<div class="tab-slider">
+								<div class="slider">
+																		<div class="slide">
+										<div class="brands-grid">
+											<div class="row">
+												<img src="img/media/brands/okey.jpg" alt="">
+												<img src="img/media/brands/karusel.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/perekrestok.png" alt="">
+												<img src="img/media/brands/utkonos.png" alt="">
+												<img src="img/media/brands/magnit.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/pyaterochka.png" alt="">
+												<img src="img/media/brands/azbuka.png" alt="">
+												<img src="img/media/brands/avoska.png" alt="">
+												<img src="img/media/brands/linia.jpg" alt="">
+												<img src="img/media/brands/billa.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/diksi.png" alt="">
+												<img src="img/media/brands/five-five.jpg" alt="">
+												<img src="img/media/brands/tvoi-dom.jpg" alt="">
+												<img src="img/media/brands/vern.png" alt="">
+												<img src="img/media/brands/da.jpg" alt="">
+												<img src="img/media/brands/yabloko.png" alt="">
+											</div>
+										</div>
 									</div>
-								</div>
+																		<div class="slide">
+										<div class="brands-grid">
+											<div class="row">
+												<img src="img/media/brands/okey.jpg" alt="">
+												<img src="img/media/brands/karusel.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/perekrestok.png" alt="">
+												<img src="img/media/brands/utkonos.png" alt="">
+												<img src="img/media/brands/magnit.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/pyaterochka.png" alt="">
+												<img src="img/media/brands/azbuka.png" alt="">
+												<img src="img/media/brands/avoska.png" alt="">
+												<img src="img/media/brands/linia.jpg" alt="">
+												<img src="img/media/brands/billa.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/diksi.png" alt="">
+												<img src="img/media/brands/five-five.jpg" alt="">
+												<img src="img/media/brands/tvoi-dom.jpg" alt="">
+												<img src="img/media/brands/vern.png" alt="">
+												<img src="img/media/brands/da.jpg" alt="">
+												<img src="img/media/brands/yabloko.png" alt="">
+											</div>
+										</div>
+									</div>
+																		<div class="slide">
+										<div class="brands-grid">
+											<div class="row">
+												<img src="img/media/brands/okey.jpg" alt="">
+												<img src="img/media/brands/karusel.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/perekrestok.png" alt="">
+												<img src="img/media/brands/utkonos.png" alt="">
+												<img src="img/media/brands/magnit.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/pyaterochka.png" alt="">
+												<img src="img/media/brands/azbuka.png" alt="">
+												<img src="img/media/brands/avoska.png" alt="">
+												<img src="img/media/brands/linia.jpg" alt="">
+												<img src="img/media/brands/billa.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/diksi.png" alt="">
+												<img src="img/media/brands/five-five.jpg" alt="">
+												<img src="img/media/brands/tvoi-dom.jpg" alt="">
+												<img src="img/media/brands/vern.png" alt="">
+												<img src="img/media/brands/da.jpg" alt="">
+												<img src="img/media/brands/yabloko.png" alt="">
+											</div>
+										</div>
+									</div>
+																	</div>
 							</div>
-						</div>
-					</li>
-				</ul>
+						</li>
+						<li>
+							<div class="tab-slider">
+								<div class="slider">
+																		<div class="slide">
+										<div class="brands-grid">
+											<div class="row">
+												<img src="img/media/brands/okey.jpg" alt="">
+												<img src="img/media/brands/karusel.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/perekrestok.png" alt="">
+												<img src="img/media/brands/utkonos.png" alt="">
+												<img src="img/media/brands/magnit.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/pyaterochka.png" alt="">
+												<img src="img/media/brands/azbuka.png" alt="">
+												<img src="img/media/brands/avoska.png" alt="">
+												<img src="img/media/brands/linia.jpg" alt="">
+												<img src="img/media/brands/billa.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/diksi.png" alt="">
+												<img src="img/media/brands/five-five.jpg" alt="">
+												<img src="img/media/brands/tvoi-dom.jpg" alt="">
+												<img src="img/media/brands/vern.png" alt="">
+												<img src="img/media/brands/da.jpg" alt="">
+												<img src="img/media/brands/yabloko.png" alt="">
+											</div>
+										</div>
+									</div>
+																		<div class="slide">
+										<div class="brands-grid">
+											<div class="row">
+												<img src="img/media/brands/okey.jpg" alt="">
+												<img src="img/media/brands/karusel.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/perekrestok.png" alt="">
+												<img src="img/media/brands/utkonos.png" alt="">
+												<img src="img/media/brands/magnit.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/pyaterochka.png" alt="">
+												<img src="img/media/brands/azbuka.png" alt="">
+												<img src="img/media/brands/avoska.png" alt="">
+												<img src="img/media/brands/linia.jpg" alt="">
+												<img src="img/media/brands/billa.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/diksi.png" alt="">
+												<img src="img/media/brands/five-five.jpg" alt="">
+												<img src="img/media/brands/tvoi-dom.jpg" alt="">
+												<img src="img/media/brands/vern.png" alt="">
+												<img src="img/media/brands/da.jpg" alt="">
+												<img src="img/media/brands/yabloko.png" alt="">
+											</div>
+										</div>
+									</div>
+																		<div class="slide">
+										<div class="brands-grid">
+											<div class="row">
+												<img src="img/media/brands/okey.jpg" alt="">
+												<img src="img/media/brands/karusel.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/perekrestok.png" alt="">
+												<img src="img/media/brands/utkonos.png" alt="">
+												<img src="img/media/brands/magnit.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/pyaterochka.png" alt="">
+												<img src="img/media/brands/azbuka.png" alt="">
+												<img src="img/media/brands/avoska.png" alt="">
+												<img src="img/media/brands/linia.jpg" alt="">
+												<img src="img/media/brands/billa.png" alt="">
+											</div>
+											<div class="row">
+												<img src="img/media/brands/diksi.png" alt="">
+												<img src="img/media/brands/five-five.jpg" alt="">
+												<img src="img/media/brands/tvoi-dom.jpg" alt="">
+												<img src="img/media/brands/vern.png" alt="">
+												<img src="img/media/brands/da.jpg" alt="">
+												<img src="img/media/brands/yabloko.png" alt="">
+											</div>
+										</div>
+									</div>
+																	</div>
+							</div>
+						</li>
+					</ul>
 
-			</div><!-- end custom-tabs -->
-
+				</div><!-- end custom-tabs -->
+			</div>
 		</div>
 	</section><!-- end products-section -->
 
@@ -509,7 +681,6 @@
 
 
 
-
 <!-- begin footer -->
 <footer class="footer">
 	<div class="uk-container uk-container--medium">
@@ -526,7 +697,7 @@
 								<ul class="footer__list">
 									<li><a href="#">Лето</a></li>
 									<li><a href="#">Деревенское угодье</a></li>
-									<li><a href="#">Junio</a></li>
+									<li><a href="#">Junior</a></li>
 									<li><a href="#">Сельская новь</a></li>
 								</ul>
 							</div>
@@ -617,7 +788,6 @@
 		</div>
 	</div>
 </footer><!-- end footer -->
-
 
 
 
