--- a/app/company.html
+++ b/app/company.html
@@ -157,7 +157,7 @@
 	<!-- begin total-section -->
 	<section class="total-section">
 		<div class="uk-container">
-			<div class="total-section__title uk-text-center">800 000 000</div>
+			<div id="counter" class="total-section__title uk-text-center js__anim-number count" uk-scrollspy="cls: slide-up; delay: 300" data-val="800000000">0</div>
 			<div class="total-section__inner">
 				<h2 class="title-h2 uk-text-center">Яиц в год</h2>
 				<ul class="total-section-list uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid>
@@ -404,6 +404,85 @@
 			</div><!-- end composition-slider -->
 		</div>
 	</section>
+
+		<!-- begin steps-work-section -->
+	<section class="steps-work-section">
+		<div class="uk-container">
+			<h2 class="title-h2 uk-text-center">Как у нас всё устроено</h2>
+			<div class="steps-work-section__inner">
+				<ul class="steps-list">
+					<li>
+						<div class="round-item">
+							<div class="round-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-10.svg" alt="" uk-img>
+							</div>
+							<div class="round-item__text">
+								<div class="title-h3">Производство <br> кормов</div>
+							</div>
+							<a href="" class="btn"><span>Предложить сырье</span></a>
+						</div>
+					</li>
+					<li>
+						<div class="round-item">
+							<div class="round-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-2"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-11.svg" alt="" uk-img>
+							</div>
+							<div class="round-item__text">
+								<div class="title-h3">Выращивание <br> и содержание <br> кур несушек</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="round-item">
+							<div class="round-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-12.svg" alt="" uk-img>
+							</div>
+							<div class="round-item__text">
+								<div class="title-h3">Сбор яиц <br> с птичников</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="round-item">
+							<div class="round-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-4"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-13.svg" alt="" uk-img>
+							</div>
+							<div class="round-item__text">
+								<div class="title-h3">Сортировка и упаковка <br> готовой продукции</div>
+							</div>
+							<a href="" class="btn"><span>Предложить сырье</span></a>
+						</div>
+					</li>
+					<li>
+						<div class="round-item">
+							<div class="round-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-5"></use>
+								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-14.svg" alt="" uk-img>
+							</div>
+							<div class="round-item__text">
+								<div class="title-h3">Отгрузка готовой продукции <br> с нашего склада и доставка до магазинов</div>
+							</div>
+							<a href="" class="btn"><span>Предложить сырье</span></a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</section><!-- end steps-work-section -->
 
 	<!-- begin products-section -->
 	<section class="products-section">
@@ -796,12 +875,13 @@
 
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
 <script src="libs/jquery-mask/jquery.maskedinput.min.js" defer></script>
 <script src="libs/uikit-3/js/uikit.min.js" defer></script>
 <script src="libs/slick/slick.min.js" defer></script>
 <script src="libs/svg4everybody.min.js" defer></script>
 <script src="libs/ofi.min.js" defer></script>
+<script src="libs/countUp/countUp.min.js" defer></script>
 <script src="js/sliders.js" defer></script>
 <script src="js/main.js" defer></script>
 
